--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "@gustavnikolaj/frame-popper",
   "version": "0.0.0",
   "description": "",
+  "main": "lib/framePopper.js",
   "scripts": {
     "coverage": "jest --coverage",
     "lint": "eslint .",
